--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
 </head>
 <body>
 
+  <picture>
+    <img src="images/hero-desktop.jpg" alt="foto da modelo">
+  </picture>
   <h1>We're coming soon</h1>
 
-  <p>
-    Hello fellow shoppers! We're currently building our new fashion store.
-    Add your email below to stay up-to-date with announcements and our launch deals.
-  </p>
-
-  Email Address
+  <section>
+    <p>
+      Hello fellow shoppers! We're currently building our new fashion store.
+      Add your email below to stay up-to-date with announcements and our launch deals.
+    </p>
+  </section>
+  <div><input type="text" name="email" id="email">Email Address</input></div>
   
   <footer>
     <p class="attribution">
