--- a/index.html
+++ b/index.html
@@ -12,18 +12,29 @@
 </head>
 <body>
 
-  <picture>
-    <img src="images/hero-desktop.jpg" alt="foto da modelo">
-  </picture>
-  <h1>We're coming soon</h1>
-
-  <section>
-    <p>
-      Hello fellow shoppers! We're currently building our new fashion store.
-      Add your email below to stay up-to-date with announcements and our launch deals.
-    </p>
-  </section>
-  <div><input type="text" name="email" id="email">Email Address</input></div>
+  <main>
+    
+    <picture>
+      <source media="(max-width: 675px)" srcset="images/hero-mobile.jpg">
+      <img src="images/hero-desktop.jpg" alt="foto da modelo">
+    </picture>
+    <div>
+      <picture id="logo">
+        <img src="images/logo.svg" alt="">
+      </picture>
+      <section>
+        <h1> <strong style="color: hsl(0, 36%, 70%);">We're</strong> <br> coming soon</h1>
+        <p style="color: hsl(0, 36%, 70%);">
+          Hello fellow shoppers! We're currently building our new fashion store.
+          Add your email below to stay up-to-date with announcements and our launch deals.
+        </p>
+        <p id="email">
+          <input type="email" name="endemail" id="endemail" placeholder="Email Address" style="border-radius: 30px ;">
+          <input type="button" value="Send" style="border-radius: 20px;" onclick="enviar()">
+        </p>
+      </section>
+     </div>
+  </main>
   
   <footer>
     <p class="attribution">
@@ -31,5 +42,6 @@
       Coded by <a href="https://github.com/LeandroKastilho">Leandro C. Gomes</a>.
     </p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
