--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
   <main>
     
         <div id="fotomodelo">
+          <img src="images/logo.svg" alt="">
           <picture>
             <source media="(max-width: 675px)" srcset="images/hero-mobile.jpg">
             <img src="images/hero-desktop.jpg" alt="foto da modelo">
           </picture>
-        </div id="fotomodelo">
+        </div>
 
       <div class="texto">
         <section>
-          <img src="images/logo.svg" alt="">
-          <h1> <strong style="color: hsl(0, 36%, 70%);">We're</strong> <br> coming soon</h1>
-          <p>
+          
+          <h1><span style="color: hsl(0, 36%, 70%);">We're</span> <br> coming <br> soon</h1>
+          <br>
+          <p style="color: hsl(0, 36%, 70%);">
             Hello fellow shoppers! We're currently building our new fashion store.
             Add your email below to stay up-to-date with announcements and our launch deals.
           </p>
