--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             Add your email below to stay up-to-date with announcements and our launch deals.
           </p>
           <p>
-            <input type="email" name="endemail" id="endemail" placeholder="Email Address" style="border-radius: 30px ;">
-            <input type="button" value="Send" style="border-radius: 20px;" onclick="enviar()">
+            <input type="email" name="email" id="email" placeholder="Email Address" style="border-radius: 30px ;">
+            <input id="button" type="button" value="Send" style="border-radius: 20px;" onclick="enviar()">
           </p>
         </section>
       </div>
